:sparkles: Adicionado novas unidades ao projeto WKComercial.
Arquivos:

- uView.PedidoVenda.pas
-uView.PedidoVenda.dfm

- Inclui as seguintes unidades no projeto:
  - uModel.uModel.Services.Exception.EFireDACPedidoProdutoBusinessException: Classe de exceção personalizada para regras de negócio relacionadas a PedidoProduto.
  - uModel.Services.PedidoProduto: Serviço para operações de negócio e persistência da entidade PedidoProduto.
  - uController.PedidoProduto: Controller para intermediar a comunicação entre a camada de negócio e a interface do usuário para PedidoProduto.
  - uController.Produto: Controller para intermediar a comunicação entre a camada de negócio e a interface do usuário para Produto.
- Essas adições são necessárias para suportar novas funcionalidades relacionadas ao gerenciamento de PedidoProduto e Produto no sistema.

--- a/src/WKComercial.dproj
+++ b/src/WKComercial.dproj
@@ -183,6 +183,10 @@
         <DCCReference Include="model\repository\uModel.ConstsStatement.Produtos.pas"/>
         <DCCReference Include="view\data\definition\uView.Data.Definition.Produto.pas"/>
         <DCCReference Include="view\uView.DataConverter.Produto.pas"/>
+        <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EFireDACPedidoProdutoBusinessException.pas"/>
+        <DCCReference Include="model\services\uModel.Services.PedidoProduto.pas"/>
+        <DCCReference Include="controller\uController.PedidoProduto.pas"/>
+        <DCCReference Include="controller\uController.Produto.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
