:sparkles: Atualização do projeto WKComercial
Arquivos modificados:

- WKComercial.dpr
- WKComercial.dproj

- Adição de novas unidades ao projeto WKComercial.dpr, incluindo uController.PedidoDadosGerais, uModel.Services.PedidoDadosGerais, uController.Cliente e novas exceções de serviço (EServiceClienteBusinessException e EServiceProdutoBusinessException). Essa modificação amplia a cobertura de controle e serviços, preparando o sistema para gerenciar dados gerais de pedidos e clientes.

--- a/src/WKComercial.dproj
+++ b/src/WKComercial.dproj
@@ -188,6 +188,11 @@
         <DCCReference Include="controller\uController.PedidoProduto.pas"/>
         <DCCReference Include="controller\uController.Produto.pas"/>
         <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EServicePedidoDadosGeraisBusinessException.pas"/>
+        <DCCReference Include="controller\uController.PedidoDadosGerais.pas"/>
+        <DCCReference Include="model\services\uModel.Services.PedidoDadosGerais.pas"/>
+        <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EServiceClienteBusinessException.pas"/>
+        <DCCReference Include="model\services\uModel.uModel.Services.Exception.EServiceProdutoBusinessException.pas"/>
+        <DCCReference Include="controller\uController.Cliente.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
