--- a/src/WKComercial.dproj
+++ b/src/WKComercial.dproj
@@ -183,14 +183,14 @@
         <DCCReference Include="model\repository\uModel.ConstsStatement.Produtos.pas"/>
         <DCCReference Include="view\data\definition\uView.Data.Definition.Produto.pas"/>
         <DCCReference Include="view\uView.DataConverter.Produto.pas"/>
-        <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EServicePedidoProdutoBusinessException.pas"/>
+        <DCCReference Include="model\services\exception\uModel.Services.Exception.EServicePedidoProdutoBusinessException.pas"/>
         <DCCReference Include="model\services\uModel.Services.PedidoProduto.pas"/>
         <DCCReference Include="controller\uController.PedidoProduto.pas"/>
         <DCCReference Include="controller\uController.Produto.pas"/>
-        <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EServicePedidoDadosGeraisBusinessException.pas"/>
+        <DCCReference Include="model\services\exception\uModel.Services.Exception.EServicePedidoDadosGeraisBusinessException.pas"/>
         <DCCReference Include="controller\uController.PedidoDadosGerais.pas"/>
         <DCCReference Include="model\services\uModel.Services.PedidoDadosGerais.pas"/>
-        <DCCReference Include="model\services\exception\uModel.uModel.Services.Exception.EServiceClienteBusinessException.pas"/>
+        <DCCReference Include="model\services\exception\uModel.Services.Exception.EServiceClienteBusinessException.pas"/>
         <DCCReference Include="model\services\uModel.uModel.Services.Exception.EServiceProdutoBusinessException.pas"/>
         <DCCReference Include="controller\uController.Cliente.pas"/>
         <BuildConfiguration Include="Base">
